
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char u_char ;


 int fputc (char,int ) ;
 int printf (char*,char*) ;
 int stdout ;
 char* strchr (char*,int) ;

void show_info(u_char *buff, int len) {
    u_char *p1,
            *p2,
            *limit;
    int nt = 0;

    limit = buff + len;
    p1 = buff + 5;
    while(p1 < limit) {
        p2 = strchr(p1, 0x00);
        if(!p2) break;
        *p2 = 0x00;

        if(!nt) {
            if(p1 == p2) break;
            printf("%30s: ", p1);
            nt++;
        } else {
            printf("%sn", p1);
            nt = 0;
        }
        p1 = p2 + 1;
    }
    fputc('n', stdout);
}
