; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_422.c_show_info.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_422.c_show_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"%30s: \00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"%sn\00", align 1
@stdout = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @show_info(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %8, align 4
  %9 = load i8*, i8** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i8, i8* %9, i64 %11
  store i8* %12, i8** %7, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = getelementptr inbounds i8, i8* %13, i64 5
  store i8* %14, i8** %5, align 8
  br label %15

15:                                               ; preds = %42, %2
  %16 = load i8*, i8** %5, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = icmp ult i8* %16, %17
  br i1 %18, label %19, label %45

19:                                               ; preds = %15
  %20 = load i8*, i8** %5, align 8
  %21 = call i8* @strchr(i8* %20, i32 0)
  store i8* %21, i8** %6, align 8
  %22 = load i8*, i8** %6, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %25, label %24

24:                                               ; preds = %19
  br label %45

25:                                               ; preds = %19
  %26 = load i8*, i8** %6, align 8
  store i8 0, i8* %26, align 1
  %27 = load i32, i32* %8, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %39, label %29

29:                                               ; preds = %25
  %30 = load i8*, i8** %5, align 8
  %31 = load i8*, i8** %6, align 8
  %32 = icmp eq i8* %30, %31
  br i1 %32, label %33, label %34

33:                                               ; preds = %29
  br label %45

34:                                               ; preds = %29
  %35 = load i8*, i8** %5, align 8
  %36 = call i32 @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* %35)
  %37 = load i32, i32* %8, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %8, align 4
  br label %42

39:                                               ; preds = %25
  %40 = load i8*, i8** %5, align 8
  %41 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* %40)
  store i32 0, i32* %8, align 4
  br label %42

42:                                               ; preds = %39, %34
  %43 = load i8*, i8** %6, align 8
  %44 = getelementptr inbounds i8, i8* %43, i64 1
  store i8* %44, i8** %5, align 8
  br label %15

45:                                               ; preds = %33, %24, %15
  %46 = load i32, i32* @stdout, align 4
  %47 = call i32 @fputc(i8 signext 110, i32 %46)
  ret void
}

declare dso_local i8* @strchr(i8*, i32) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i32 @fputc(i8 signext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
